@@ -1,3 +1,15 @@
+2007-06-20  Sam Weinig  <sam@webkit.org>
+
+        Rubber stamped by Adam Roben.
+
+        Add licenses.
+
+        * page/inspector/ConsolePanel.js:
+        * page/inspector/NetworkPanel.js:
+        * page/inspector/Resource.js:
+        * page/inspector/ResourceCategory.js:
+        * page/inspector/ResourcePanel.js:
+
 2007-06-20  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Adam.
